--- a/src/blocks/modules/root/root.scss
+++ b/src/blocks/modules/root/root.scss
@@ -1,11 +1,16 @@
 .root::-webkit-scrollbar {
-  width: 5px;
+  width: 10px;
 }
 .root::-webkit-scrollbar-track {
-  background: transparent;
+  background: $focus;
 }
 .root::-webkit-scrollbar-thumb {
-  background: blue;
-  border: 3px solid blue;
+  background: $active;
+  border: 3px solid $focus;
   border-radius: 5px;
+}
+
+.root__menu-open {
+  height: 100vh;
+  overflow: hidden;
 }
