--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -1,19 +1,9 @@
 @font-face {
-  font-family: 'Roboto-Regular';
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-  src: local('Roboto Rerular'), local('Roboto-Rerular'),
-  url(../fonts/Roboto-Regular.woff2) format('woff2'),
-  url(../fonts/Roboto-Regular.woff) format('woff');
-}
-
-@font-face {
-  font-family: 'Roboto-Medium';
+  font-family: 'Raleway-Medium';
   font-weight: 500;
   font-style: normal;
   font-display: swap;
-  src: local('Roboto Medium'), local('Roboto-Medium'),
-  url(../fonts/Roboto-Medium.woff2) format('woff2'),
-  url(../fonts/Roboto-Medium.woff) format('woff');
+  src: local('Raleway-Medium'), local('Raleway Medium'),
+  url(../fonts/Raleway-Medium.woff2) format('woff2'),
+  url(../fonts/Raleway-Medium.woff) format('woff');
 }
