--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -1,3 +1,21 @@
 // fonts
-$font-primary: 'Roboto-Regular', Arial, Helvetica, sans-serif;
-$font-medium: 'Roboto-Medium', Arial, Helvetica, sans-serif;
+$font: 'Raleway-Medium', Arial, Helvetica, sans-serif;
+
+// colors
+$white: #fff;
+
+// grayscale colors
+$text-black: #2c2d35;
+$text-white: #f4f6f5;
+$text-grey: #86928B;
+$text-green: #598d66;
+
+// accent colors
+$active: #376b44;
+$hover: #598d66;
+$focus: #d4e8d9;
+
+$promo: #eedb6d;
+$promo-active: #d9b949;
+$promo-hover: #faeb97;
+$promo-stroke: #a38314;
