--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -2,7 +2,9 @@
 $font: 'Raleway-Medium', Arial, Helvetica, sans-serif;
 
 // colors
-$white: #fff;
+$main-background: #fff;
+$background: #e1ede6;
+$border: #c3d1c6;
 
 // grayscale colors
 $text-black: #2c2d35;
