--- a/src/styles/helpers/_mixins.scss
+++ b/src/styles/helpers/_mixins.scss
@@ -21,4 +21,9 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 23px;
+
+  @media screen and (max-width: 768px) {
+    font-size: 18px;
+    line-height: 21px;
+  }
 }
