--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -2,7 +2,7 @@ extends layouts/default
 include helpers/mixins
 
 block variables
-    - const title = "Name"
+  - const title = "Ink. House"
 
 block content
   //include ../blocks/modules/intro/intro
