--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -5,4 +5,4 @@ block variables
   - const title = "Ink. House"
 
 block content
-  //include ../blocks/modules/intro/intro
+  include ../blocks/modules/intro/intro
