--- a/src/blocks/modules/page/page.scss
+++ b/src/blocks/modules/page/page.scss
@@ -1,8 +1,8 @@
 .page {
   min-width: 320px;
   font-family: $font;
-  background-color: $main-background;
-  color: $text-black;
+  background-color: $background-main;
+  color: $text-main;
 
   &__container {
     max-width: 1110px;
