--- a/src/blocks/components/logo/logo.scss
+++ b/src/blocks/components/logo/logo.scss
@@ -1,7 +1,7 @@
 .logo {
   width: 143px;
   height: 35px;
-  outline-color: $active;
+  outline-color: $base-active;
 
   &__img {
     background-color: transparent;
