--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -22,5 +22,5 @@ img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    background-color: $active;
+    background-color: $base-active;
 }
