refactor: rename classes

--- a/src/blocks/modules/intro/intro.pug
+++ b/src/blocks/modules/intro/intro.pug
@@ -1,4 +1,4 @@
-section.intro.page__container
+section#intro.intro.page__container
   +img('./img/intro_banner.jpg', 'Графический рисунок голубя').intro__image
   div.intro__container
     h1.intro__title
