--- a/src/blocks/modules/header/header.pug
+++ b/src/blocks/modules/header/header.pug
@@ -10,5 +10,5 @@ header.header
 
   div.header__burger.page__container
     button.button.button_icon(type='button' aria-label='Открыть меню' aria-expanded='false')
-      +svg('burger').button_icon_svg
+      +svg('burger').button__svg
     +svg-link('shopping-cart', '#', 'Корзина')
