style: max-width page

--- a/src/blocks/modules/intro/intro.scss
+++ b/src/blocks/modules/intro/intro.scss
@@ -1,15 +1,20 @@
 .intro {
   display: grid;
   grid-template-columns: fit-content(50%) fit-content(50%);
-  justify-content: space-between;
+  grid-template-areas:
+      "image text";
   align-items: center;
   column-gap: 30px;
 
   &__image {
+    grid-area: image;
     aspect-ratio: 27 / 31;
   }
 
   &__container {
+    grid-area: text;
+    width: 100%;
+    max-width: 540px;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -40,36 +45,35 @@
 }
 
 @media screen and (max-width: 768px) {
+  .intro__title {
+    line-height: 100%;
+  }
+
+  .intro__button {
+    margin-top: 20px;
+  }
+}
+
+@media screen and (max-width: 720px) {
   .intro {
     padding-top: 50px;
-
-    &__title {
-      line-height: 100%;
-    }
-
-    &__button {
-      margin-top: 20px;
-    }
   }
 }
 
-@media screen and (max-width: 600px) {
-  .intro {
-    grid-template-columns: fit-content(40%) fit-content(60%);
+@media screen and (max-width: 576px) {
+  .intro__container {
+    gap: 10px;
+  }
 
-    &__container {
-      gap: 10px;
-    }
-
-    &__button {
-      margin-top: 0;
-    }
+  .intro__button {
+    margin-top: 0;
   }
 }
 
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 520px) {
   .intro {
-    grid-template-columns: fit-content(100%);
+    grid-template-areas:
+      "text text";
 
     &__image {
       display: none;
