future: section catalog, one tab

--- a/src/blocks/modules/catalog/catalog.pug
+++ b/src/blocks/modules/catalog/catalog.pug
@@ -8,3 +8,16 @@ section#catalog.catalog.page__container
         +tab('Германия')
       li
         +tab('Англия')
+  ul.catalog__cards.catalog__france
+    li
+      +card('./img/rep_france/f1.jpg', 'Марсель Руссо', 'Охота Амура', 'Холст, масло (50х80)', '14 500 руб')
+    li
+      +card('./img/rep_france/f2.jpg', 'Анри Селин', 'Дама с собачкой', 'Бумага, акрил (50х80)', '16 500 руб')
+    li
+      +card('./img/rep_france/f3.jpg', 'Франсуа Дюпон', 'Процедура', 'Цветная литография (40х60)', '20 000 руб')
+    li
+      +card('./img/rep_france/f4.jpg', 'Луи Детуш', 'Роза', 'Бумага, акрил (50х80)', '12 000 руб')
+    li
+      +card('./img/rep_france/f5.jpg', 'Франсуа Дюпон', 'Птичья трапеза', 'Цветная литография (40х60) ', '22 500 руб')
+    li
+      +card('./img/rep_france/f6.jpg', 'Пьер Моранж', 'Пейзаж с рыбой', 'Цветная литография (40х60)', '20 000 руб')
