--- a/src/views/helpers/mixins.pug
+++ b/src/views/helpers/mixins.pug
@@ -18,9 +18,10 @@ mixin tab(title)
 
 mixin card(src, author, title, material, price)
   article.card
-    +img(src=src, alt=title).card__image
-    p.card__author= author
-    h3.card__title= title
-    p.card__material= material
+    +img(src=src alt=title).card__image
+    div.card__info
+      p.card__author= author
+      h3.card__title= title
+      p.card__material= material
     p.card__price= price
     button.button.button_primary.card__button(type='button') В корзину
