--- a/src/blocks/components/card/card.scss
+++ b/src/blocks/components/card/card.scss
@@ -1,5 +1,6 @@
 .card {
   width: 100%;
+  height: 100%;
   box-sizing: border-box;
   padding: 20px 20px 30px;
   display: flex;
@@ -8,7 +9,15 @@
   background-color: $base-light;
 
   &__image {
+    height: fit-content;
     aspect-ratio: 310 / 422;
+  }
+
+  &__info {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    gap: 10px;
   }
 
   &__author {
@@ -52,10 +61,9 @@
   &__button {
     margin-top: 10px;
   }
-
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1024px) {
 
   .card__author {
     margin-top: 5px;
@@ -80,5 +88,12 @@
 
   .card__button {
     margin-top: 0;
+    padding: 14px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .card__image {
+    aspect-ratio: 1;
   }
 }
