--- a/src/blocks/modules/catalog/catalog.pug
+++ b/src/blocks/modules/catalog/catalog.pug
@@ -3,12 +3,12 @@ section#catalog.catalog.page__container
     h2.catalog__title Репродукции
     ul.catalog__tabs
       li
-        +tab('Франция')
+        +tab('Франция')(data='france').catalog__tab.button_tab_active
       li
-        +tab('Германия')
+        +tab('Германия')(data='germany').catalog__tab
       li
-        +tab('Англия')
-  ul.catalog__cards.catalog__france
+        +tab('Англия')(data='england').catalog__tab
+  ul.catalog__cards.catalog__france.catalog__cards_active
     li
       +card('./img/rep_france/f1.jpg', 'Марсель Руссо', 'Охота Амура', 'Холст, масло (50х80)', '14 500 руб')
     li
@@ -21,3 +21,31 @@ section#catalog.catalog.page__container
       +card('./img/rep_france/f5.jpg', 'Франсуа Дюпон', 'Птичья трапеза', 'Цветная литография (40х60) ', '22 500 руб')
     li
       +card('./img/rep_france/f6.jpg', 'Пьер Моранж', 'Пейзаж с рыбой', 'Цветная литография (40х60)', '20 000 руб')
+
+  ul.catalog__cards.catalog__germany
+    li
+      +card('./img/rep_germany/g1.jpg', 'Курт Вернер', 'Над городом', 'Цветная литография (40х60)', '16 000 руб')
+    li
+      +card('./img/rep_germany/g2.jpg', 'Макс Рихтер', 'Птенцы', 'Холст, масло (50х80)', '14 500 руб')
+    li
+      +card('./img/rep_germany/g3.jpg', 'Мартин Майер', 'Среди листьев', 'Цветная литография (40х60)', '20 000 руб')
+    li
+      +card('./img/rep_germany/g4.jpg', 'Герман Беккер', 'Яркая птица', 'Цветная литография (40х60)', '13 000 руб')
+    li
+      +card('./img/rep_germany/g5.jpg', 'Вульф Бауэр', 'Дятлы', 'Бумага, акрил (50х80)', '20 000 руб')
+    li
+      +card('./img/rep_germany/g6.jpg', 'Вальтер Хартманн', 'Большие воды', 'Бумага, акрил (50х80)', '23 000 руб')
+
+  ul.catalog__cards.catalog__england
+    li
+      +card('./img/rep_england/e1.jpg', 'Пол Смит', 'Дикий зверь', 'Акварель, бумага (50х80) ', '19 500 руб')
+    li
+      +card('./img/rep_england/e2.jpg', 'Джон Уайт', 'Скалистый берег', 'Цветная литография (40х60)', '17 500 руб')
+    li
+      +card('./img/rep_england/e3.jpg', 'Джим Уотсон', 'Река и горы', 'Акварель, бумага (50х80)', '20 500 руб')
+    li
+      +card('./img/rep_england/e4.jpg', 'Юджин Зиллион', 'Белый попугай', 'Цветная литография (40х60)', '15 500 руб')
+    li
+      +card('./img/rep_england/e5.jpg', 'Эрик Гиллман', 'Ночная рыба', 'Бумага, акрил (50х80)', '12 500 руб')
+    li
+      +card('./img/rep_england/e6.jpg', 'Альфред Барр', 'Рыжий кот', 'Цветная литография (40х60)', '21 000 руб')
