--- a/src/blocks/components/card/card.scss
+++ b/src/blocks/components/card/card.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  background-color: $base-light;
+  background-color: $background-section;
 
   &__image {
     aspect-ratio: 310 / 422;
