future: img to picture

--- a/src/blocks/modules/catalog/catalog.pug
+++ b/src/blocks/modules/catalog/catalog.pug
@@ -8,44 +8,81 @@ section#catalog.catalog.page__container
         +tab('Германия')(data='germany').catalog__tab
       li
         +tab('Англия')(data='england').catalog__tab
+
   ul.catalog__cards.catalog__france.catalog__cards_active
     li
-      +card('./img/rep_france/f1.jpg', 'Марсель Руссо', 'Охота Амура', 'Холст, масло (50х80)', '14 500 руб')
+      +card('./img/rep_france/f1.jpg', './img/rep_france/f1.webp',
+            'Марсель Руссо', 'Охота Амура', 'Холст, масло (50х80)',
+            '14 500 руб')
     li
-      +card('./img/rep_france/f2.jpg', 'Анри Селин', 'Дама с собачкой', 'Бумага, акрил (50х80)', '16 500 руб')
+      +card('./img/rep_france/f2.jpg', './img/rep_france/f2.webp',
+            'Анри Селин', 'Дама с собачкой', 'Бумага, акрил (50х80)',
+            '16 500 руб')
     li
-      +card('./img/rep_france/f3.jpg', 'Франсуа Дюпон', 'Процедура', 'Цветная литография (40х60)', '20 000 руб')
+      +card('./img/rep_france/f3.jpg', './img/rep_france/f3.webp',
+            'Франсуа Дюпон', 'Процедура', 'Цветная литография (40х60)',
+            '20 000 руб')
     li
-      +card('./img/rep_france/f4.jpg', 'Луи Детуш', 'Роза', 'Бумага, акрил (50х80)', '12 000 руб')
+      +card('./img/rep_france/f4.jpg', './img/rep_france/f4.webp',
+            'Луи Детуш', 'Роза', 'Бумага, акрил (50х80)',
+            '12 000 руб')
     li
-      +card('./img/rep_france/f5.jpg', 'Франсуа Дюпон', 'Птичья трапеза', 'Цветная литография (40х60) ', '22 500 руб')
+      +card('./img/rep_france/f5.jpg', './img/rep_france/f5.webp',
+            'Франсуа Дюпон', 'Птичья трапеза', 'Цветная литография (40х60) ',
+            '22 500 руб')
     li
-      +card('./img/rep_france/f6.jpg', 'Пьер Моранж', 'Пейзаж с рыбой', 'Цветная литография (40х60)', '20 000 руб')
+      +card('./img/rep_france/f6.jpg', './img/rep_france/f6.webp',
+            'Пьер Моранж', 'Пейзаж с рыбой', 'Цветная литография (40х60)',
+            '20 000 руб')
 
   ul.catalog__cards.catalog__germany
     li
-      +card('./img/rep_germany/g1.jpg', 'Курт Вернер', 'Над городом', 'Цветная литография (40х60)', '16 000 руб')
+      +card('./img/rep_germany/g1.jpg', './img/rep_germany/g1.webp',
+            'Курт Вернер', 'Над городом', 'Цветная литография (40х60)',
+            '16 000 руб')
     li
-      +card('./img/rep_germany/g2.jpg', 'Макс Рихтер', 'Птенцы', 'Холст, масло (50х80)', '14 500 руб')
+      +card('./img/rep_germany/g2.jpg', './img/rep_germany/g2.webp',
+            'Макс Рихтер', 'Птенцы', 'Холст, масло (50х80)',
+            '14 500 руб')
     li
-      +card('./img/rep_germany/g3.jpg', 'Мартин Майер', 'Среди листьев', 'Цветная литография (40х60)', '20 000 руб')
+      +card('./img/rep_germany/g3.jpg', './img/rep_germany/g3.webp',
+            'Мартин Майер', 'Среди листьев', 'Цветная литография (40х60)',
+            '20 000 руб')
     li
-      +card('./img/rep_germany/g4.jpg', 'Герман Беккер', 'Яркая птица', 'Цветная литография (40х60)', '13 000 руб')
+      +card('./img/rep_germany/g4.jpg', './img/rep_germany/g4.webp',
+            'Герман Беккер', 'Яркая птица', 'Цветная литография (40х60)',
+            '13 000 руб')
     li
-      +card('./img/rep_germany/g5.jpg', 'Вульф Бауэр', 'Дятлы', 'Бумага, акрил (50х80)', '20 000 руб')
+      +card('./img/rep_germany/g5.jpg', './img/rep_germany/g5.webp',
+            'Вульф Бауэр', 'Дятлы', 'Бумага, акрил (50х80)',
+            '20 000 руб')
     li
-      +card('./img/rep_germany/g6.jpg', 'Вальтер Хартманн', 'Большие воды', 'Бумага, акрил (50х80)', '23 000 руб')
+      +card('./img/rep_germany/g6.jpg', './img/rep_germany/g6.webp',
+            'Вальтер Хартманн', 'Большие воды', 'Бумага, акрил (50х80)',
+            '23 000 руб')
 
   ul.catalog__cards.catalog__england
     li
-      +card('./img/rep_england/e1.jpg', 'Пол Смит', 'Дикий зверь', 'Акварель, бумага (50х80) ', '19 500 руб')
+      +card('./img/rep_england/e1.jpg', './img/rep_england/e1.webp',
+            'Пол Смит', 'Дикий зверь', 'Акварель, бумага (50х80) ',
+            '19 500 руб')
     li
-      +card('./img/rep_england/e2.jpg', 'Джон Уайт', 'Скалистый берег', 'Цветная литография (40х60)', '17 500 руб')
+      +card('./img/rep_england/e2.jpg', './img/rep_england/e2.webp',
+            'Джон Уайт', 'Скалистый берег', 'Цветная литография (40х60)',
+            '17 500 руб')
     li
-      +card('./img/rep_england/e3.jpg', 'Джим Уотсон', 'Река и горы', 'Акварель, бумага (50х80)', '20 500 руб')
+      +card('./img/rep_england/e3.jpg', './img/rep_england/e3.webp',
+            'Джим Уотсон', 'Река и горы', 'Акварель, бумага (50х80)',
+            '20 500 руб')
     li
-      +card('./img/rep_england/e4.jpg', 'Юджин Зиллион', 'Белый попугай', 'Цветная литография (40х60)', '15 500 руб')
+      +card('./img/rep_england/e4.jpg', './img/rep_england/e4.webp',
+            'Юджин Зиллион', 'Белый попугай', 'Цветная литография (40х60)',
+            '15 500 руб')
     li
-      +card('./img/rep_england/e5.jpg', 'Эрик Гиллман', 'Ночная рыба', 'Бумага, акрил (50х80)', '12 500 руб')
+      +card('./img/rep_england/e5.jpg', './img/rep_england/e5.webp',
+            'Эрик Гиллман', 'Ночная рыба', 'Бумага, акрил (50х80)',
+            '12 500 руб')
     li
-      +card('./img/rep_england/e6.jpg', 'Альфред Барр', 'Рыжий кот', 'Цветная литография (40х60)', '21 000 руб')
+      +card('./img/rep_england/e6.jpg', './img/rep_england/e6.webp',
+            'Альфред Барр', 'Рыжий кот', 'Цветная литография (40х60)',
+            '21 000 руб')
