future: add mixin picture

--- a/src/blocks/modules/intro/intro.pug
+++ b/src/blocks/modules/intro/intro.pug
@@ -1,7 +1,5 @@
 section#intro.intro.page__container
-  picture
-    +source('./img/intro_banner.webp')
-    +img('./img/intro_banner.jpg', 'Графический рисунок голубя').intro__image
+  +picture-jpg('./img/intro_banner', 'Графический рисунок голубя').intro__image
   div.intro__container
     h1.intro__title
       | Реплики картин<br>
