--- a/src/blocks/modules/catalog/catalog.pug
+++ b/src/blocks/modules/catalog/catalog.pug
@@ -11,78 +11,78 @@ section#catalog.catalog.page__container
 
   ul.catalog__cards.catalog__france.catalog__cards_active
     li
-      +card('./img/rep_france/f1.jpg', './img/rep_france/f1.webp',
+      +card('./img/rep_france/f1',
             'Марсель Руссо', 'Охота Амура', 'Холст, масло (50х80)',
             '14 500 руб')
     li
-      +card('./img/rep_france/f2.jpg', './img/rep_france/f2.webp',
+      +card('./img/rep_france/f2',
             'Анри Селин', 'Дама с собачкой', 'Бумага, акрил (50х80)',
             '16 500 руб')
     li
-      +card('./img/rep_france/f3.jpg', './img/rep_france/f3.webp',
+      +card('./img/rep_france/f3',
             'Франсуа Дюпон', 'Процедура', 'Цветная литография (40х60)',
             '20 000 руб')
     li
-      +card('./img/rep_france/f4.jpg', './img/rep_france/f4.webp',
+      +card('./img/rep_france/f4',
             'Луи Детуш', 'Роза', 'Бумага, акрил (50х80)',
             '12 000 руб')
     li
-      +card('./img/rep_france/f5.jpg', './img/rep_france/f5.webp',
+      +card('./img/rep_france/f5',
             'Франсуа Дюпон', 'Птичья трапеза', 'Цветная литография (40х60) ',
             '22 500 руб')
     li
-      +card('./img/rep_france/f6.jpg', './img/rep_france/f6.webp',
+      +card('./img/rep_france/f6',
             'Пьер Моранж', 'Пейзаж с рыбой', 'Цветная литография (40х60)',
             '20 000 руб')
 
   ul.catalog__cards.catalog__germany
     li
-      +card('./img/rep_germany/g1.jpg', './img/rep_germany/g1.webp',
+      +card('./img/rep_germany/g1',
             'Курт Вернер', 'Над городом', 'Цветная литография (40х60)',
             '16 000 руб')
     li
-      +card('./img/rep_germany/g2.jpg', './img/rep_germany/g2.webp',
+      +card('./img/rep_germany/g2',
             'Макс Рихтер', 'Птенцы', 'Холст, масло (50х80)',
             '14 500 руб')
     li
-      +card('./img/rep_germany/g3.jpg', './img/rep_germany/g3.webp',
+      +card('./img/rep_germany/g3',
             'Мартин Майер', 'Среди листьев', 'Цветная литография (40х60)',
             '20 000 руб')
     li
-      +card('./img/rep_germany/g4.jpg', './img/rep_germany/g4.webp',
+      +card('./img/rep_germany/g4',
             'Герман Беккер', 'Яркая птица', 'Цветная литография (40х60)',
             '13 000 руб')
     li
-      +card('./img/rep_germany/g5.jpg', './img/rep_germany/g5.webp',
+      +card('./img/rep_germany/g5',
             'Вульф Бауэр', 'Дятлы', 'Бумага, акрил (50х80)',
             '20 000 руб')
     li
-      +card('./img/rep_germany/g6.jpg', './img/rep_germany/g6.webp',
+      +card('./img/rep_germany/g6',
             'Вальтер Хартманн', 'Большие воды', 'Бумага, акрил (50х80)',
             '23 000 руб')
 
   ul.catalog__cards.catalog__england
     li
-      +card('./img/rep_england/e1.jpg', './img/rep_england/e1.webp',
+      +card('./img/rep_england/e1',
             'Пол Смит', 'Дикий зверь', 'Акварель, бумага (50х80) ',
             '19 500 руб')
     li
-      +card('./img/rep_england/e2.jpg', './img/rep_england/e2.webp',
+      +card('./img/rep_england/e2',
             'Джон Уайт', 'Скалистый берег', 'Цветная литография (40х60)',
             '17 500 руб')
     li
-      +card('./img/rep_england/e3.jpg', './img/rep_england/e3.webp',
+      +card('./img/rep_england/e3',
             'Джим Уотсон', 'Река и горы', 'Акварель, бумага (50х80)',
             '20 500 руб')
     li
-      +card('./img/rep_england/e4.jpg', './img/rep_england/e4.webp',
+      +card('./img/rep_england/e4',
             'Юджин Зиллион', 'Белый попугай', 'Цветная литография (40х60)',
             '15 500 руб')
     li
-      +card('./img/rep_england/e5.jpg', './img/rep_england/e5.webp',
+      +card('./img/rep_england/e5',
             'Эрик Гиллман', 'Ночная рыба', 'Бумага, акрил (50х80)',
             '12 500 руб')
     li
-      +card('./img/rep_england/e6.jpg', './img/rep_england/e6.webp',
+      +card('./img/rep_england/e6',
             'Альфред Барр', 'Рыжий кот', 'Цветная литография (40х60)',
             '21 000 руб')
