--- a/src/views/helpers/mixins.pug
+++ b/src/views/helpers/mixins.pug
@@ -1,8 +1,16 @@
 mixin img(src, alt)
   img(src=src alt=alt loading='lazy')&attributes(attributes)
 
-mixin source(srcset)
-  source(srcset=srcset type='image/webp')&attributes(attributes)
+mixin picture(src, alt, ext)
+  picture
+    source(srcset=src + '.webp' type='image/webp')
+    img(src=src + ext alt=alt loading='lazy')&attributes(attributes)
+
+mixin picture-jpg(src, alt)
+  +picture(src, alt, '.jpg')&attributes(attributes)
+
+mixin picture-png(src, alt)
+  +picture(src, alt, '.png')&attributes(attributes)
 
 mixin svg(name)
   svg(data-svg=name)&attributes(attributes)
@@ -19,11 +27,9 @@ mixin nav(title, href)
 mixin tab(title)
   button.button.button_tab(type='button')&attributes(attributes)= title
 
-mixin card(src, srcset, author, title, material, price)
+mixin card(src, author, title, material, price)
   article.card
-    picture
-      source(srcset=srcset type='image/webp')
-      img(src=src alt=title loading='lazy').card__image
+    +picture-jpg(src, title).card__image
     div.card__info
       p.card__author= author
       h3.card__title= title
