fix: title intro

--- a/src/blocks/modules/intro/intro.pug
+++ b/src/blocks/modules/intro/intro.pug
@@ -2,7 +2,7 @@ section#intro.intro.page__container
   +picture-jpg('./img/intro_banner', 'Графический рисунок голубя').intro__image
   div.intro__container
     h1.intro__title
-      | Реплики картин<br>
+      | Реплики картин
       | от&nbsp;#[span.intro__title.intro__title_accent Ink. House]
     p.intro__text
       | Высокое качество отрисовки на&nbsp;плотной бумаге или льняном холсте.
