--- a/src/blocks/modules/intro/intro.scss
+++ b/src/blocks/modules/intro/intro.scss
@@ -18,6 +18,7 @@
   }
 
   &__title {
+    width: 100%;
     font-family: $font;
     font-style: normal;
     font-weight: 500;
@@ -54,10 +55,15 @@
 @media screen and (max-width: 720px) {
   .intro {
     padding-top: 50px;
+    align-items: start;
   }
 }
 
 @media screen and (max-width: 576px) {
+  .intro {
+    column-gap: 0;
+  }
+
   .intro__container {
     gap: 10px;
   }
@@ -77,6 +83,10 @@
 
     &__container {
       gap: 20px;
+    }
+
+    &__title {
+      max-width: 320px;
     }
 
     &__button {
