future: promo gradient

--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -5,7 +5,7 @@ $font: 'Raleway-Medium', Arial, Helvetica, sans-serif;
 $background-main: #fff;
 $background-section: #e1ede6;
 $border-section: #c3d1c6;
-$blur: rgb(13, 43, 67, .8);
+$blur: rgb(13, 43, 67);
 
 // grayscale colors
 $text-main: #2c2d35;
