--- a/src/blocks/modules/promo/promo.scss
+++ b/src/blocks/modules/promo/promo.scss
@@ -11,13 +11,14 @@
     content: '';
     position: absolute;
     top: 0;
-    left: -25px;
+    left: 0;
     bottom: 0;
-    width: calc(100vw - 40%);
+    width: 100%;
     height: 100%;
     background-color: $blur;
+    opacity: .9;
     mix-blend-mode: multiply;
-    filter: blur(25px);
+    mask-image: linear-gradient(to top right, $blur, rgb(13 43 67 / .5));
   }
 
   &__container {
@@ -63,17 +64,10 @@
   }
 }
 
-@media screen and (max-width: 980px){
+@media screen and (max-width: 768px) {
   .promo:before {
-    width: calc(100vw - 20%);
-  }
-}
-
-@media screen and (max-width: 768px){
-  .promo:before {
-    left: 0;
-    width: 100%;
-    filter: blur(0);
+    mask-image: none;
+    opacity: .7;
   }
 
   .promo__heading {
@@ -97,7 +91,7 @@
   }
 }
 
-@media screen and (max-width: 576px){
+@media screen and (max-width: 576px) {
   .promo__container {
     padding-top: 50px;
     padding-bottom: 50px;
@@ -121,7 +115,11 @@
   }
 }
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 550px) {
+  .promo {
+    background-position: top left;
+  }
+
   .promo__button {
     align-self: center;
     margin-top: 10px;
