--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -41,7 +41,7 @@
   .header__links {
     margin-top: 16px;
     padding-top: 16px;
-    border-top: 1px solid $border-section;
+    border-top: 1px solid $blur-light;
     justify-content: space-between;
     align-self: stretch;
   }
