--- a/src/blocks/modules/promo/promo.scss
+++ b/src/blocks/modules/promo/promo.scss
@@ -15,10 +15,8 @@
     bottom: 0;
     width: 100%;
     height: 100%;
-    background-color: $blur;
-    opacity: .9;
     mix-blend-mode: multiply;
-    mask-image: linear-gradient(to top right, $blur, rgb(13 43 67 / .5));
+    background: linear-gradient(90deg, $blur 0%, $blur-light 90%);
   }
 
   &__container {
@@ -66,7 +64,7 @@
 
 @media screen and (max-width: 768px) {
   .promo:before {
-    mask-image: none;
+    background: $blur;
     opacity: .7;
   }
 
