--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -4,8 +4,8 @@ $font: 'Raleway-Medium', Arial, Helvetica, sans-serif;
 // background colors
 $background-main: #fff;
 $background-section: #e1ede6;
-$border-section: #c3d1c6;
-$blur: rgb(13, 43, 67);
+$blur: #0d2b43;
+$blur-light: #c3d1c6;
 
 // grayscale colors
 $text-main: #2c2d35;
