--- a/src/views/helpers/mixins.pug
+++ b/src/views/helpers/mixins.pug
@@ -6,11 +6,17 @@ mixin picture(src, alt, ext)
     source(srcset=src + '.webp' type='image/webp')
     img(src=src + ext alt=alt loading='lazy')&attributes(attributes)
 
+mixin picture-size(src, alt, ext)
+  picture
+    source(srcset=src + '-mobile.webp' type='image/webp' media='(max-width: 520px)')
+    source(srcset=src + '.webp' type='image/webp')
+    img(src=src + ext alt=alt loading='lazy')&attributes(attributes)
+
 mixin picture-jpg(src, alt)
-  +picture(src, alt, '.jpg')&attributes(attributes)
+  +picture-size(src, alt, '.jpg')&attributes(attributes)
 
 mixin picture-png(src, alt)
-  +picture(src, alt, '.png')&attributes(attributes)
+  +picture-size(src, alt, '.png')&attributes(attributes)
 
 mixin svg(name)
   svg(data-svg=name)&attributes(attributes)
@@ -29,10 +35,7 @@ mixin tab(title)
 
 mixin card(src, author, title, material, price)
   article.card
-    picture
-      source(srcset=src + '-mobile.webp' type='image/webp' media='(max-width: 520px)')
-      source(srcset=src + '.webp' type='image/webp')
-      img(src=src + ext alt=alt loading='lazy').card__image
+    +picture-size(src, title).card__image
     div.card__info
       p.card__author= author
       h3.card__title= title
