future: section team

--- a/src/blocks/modules/promo/promo.scss
+++ b/src/blocks/modules/promo/promo.scss
@@ -115,6 +115,7 @@
 
 @media screen and (max-width: 550px) {
   .promo {
+    background-image: url(../../../img/promo/promo_banner-mobile.jpg);
     background-position: top left;
   }
 
