--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -8,3 +8,4 @@ block content
   include ../blocks/modules/intro/intro
   include ../blocks/modules/catalog/catalog
   include ../blocks/modules/promo/promo
+  include ../blocks/modules/team/team
