--- a/src/blocks/modules/intro/intro.pug
+++ b/src/blocks/modules/intro/intro.pug
@@ -1,5 +1,5 @@
 section#intro.intro.page__container
-  +picture-jpg('./img/intro/intro_banner', 'Графический рисунок голубя').intro__image
+  +picture('./img/intro/intro_banner', 'Графический рисунок голубя').intro__image
   div.intro__container
     h1.intro__title
       | Реплики картин
