--- a/src/blocks/modules/team/team.scss
+++ b/src/blocks/modules/team/team.scss
@@ -1,17 +1,18 @@
 .team {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: fit-content(445px) fit-content(635px);
+  align-items: center;
   column-gap: 30px;
 
   &__image {
-    max-width: 445px;
     aspect-ratio: 445 / 440;
     background-color: transparent;
   }
 
   &__container {
-    margin-top: 100px;
+    margin-top: 80px;
+    min-width: fit-content;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -40,9 +41,16 @@
   }
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 930px) {
   .team {
-    align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 30px;
+
+    &__image {
+      max-width: 74%;
+    }
 
     &__container {
       margin-top: 0;
@@ -50,35 +58,8 @@
   }
 }
 
-@media screen and (max-width: 768px) {
-  .team {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    gap: 40px;
-
-    &__image {
-      max-width: 74%;
-    }
-
-    &__container {
-      gap: 30px;
-    }
-  }
-}
-
-@media screen and (max-width: 576px) {
-  .team {
-    gap: 30px;
-
-    &__container {
-      gap: 20px;
-    }
-  }
-}
-
 @media screen and (max-width: 520px) {
   .team__image {
-    max-width: fit-content;
+    max-width: 100%;
   }
 }
