--- a/src/blocks/modules/header/header.pug
+++ b/src/blocks/modules/header/header.pug
@@ -1,5 +1,5 @@
 header.header
-  nav.header__container.page__container
+  nav.header__container.page__container.page__container_type_header
     include ../../components/logo/logo
     ul.header__links
       li.nav
