--- a/src/blocks/modules/team/team.scss
+++ b/src/blocks/modules/team/team.scss
@@ -2,7 +2,6 @@
   width: 100%;
   display: grid;
   grid-template-columns: fit-content(445px) fit-content(635px);
-  align-items: center;
   column-gap: 30px;
 
   &__image {
@@ -11,6 +10,7 @@
   }
 
   &__container {
+    align-self: center;
     margin-top: 80px;
     min-width: fit-content;
     display: flex;
@@ -41,7 +41,14 @@
   }
 }
 
-@media screen and (max-width: 930px) {
+@media screen and (max-width: 1024px) {
+  .team__container {
+    align-self: end;
+    margin-top: 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
   .team {
     display: flex;
     flex-direction: column;
